--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: Roboto;
+  src: url(./Roboto_Flex/RobotoFlex-VariableFont_GRAD\,XTRA\,YOPQ\,YTAS\,YTDE\,YTFI\,YTLC\,YTUC\,opsz\,slnt\,wdth\,wght.ttf);
+}
+
 html,
 body {
   margin: 0;
-  min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
 }
 
 a {
@@ -13,7 +19,27 @@ a:visited {
   color: black;
 }
 
+
+li {
+  background-color: orange;
+  padding: 10px;
+  font-weight: bold;
+}
+
+li:hover {
+  cursor: pointer;
+}
+
+table {
+  border: 1px solid black;
+}
+
+td {
+  text-align: center;
+}
+
 #content {
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
@@ -24,6 +50,7 @@ a:visited {
 }
 
 #header {
+  grid-area: header;
   position: fixed;
   top: 0;
   right: 0;
@@ -31,9 +58,9 @@ a:visited {
   height: max-content;
   background-color: yellow;
   display: grid;
-  grid-template-columns: repeat(2, min-content);
+  grid-template-columns: 390px 1fr 390px;
   grid-template-rows: max-content;
-  grid-template-areas: 'left right';
+  grid-template-areas: 'left tabs right';
   justify-content: space-between;
   padding: 10px 100px;
 }
@@ -50,8 +77,20 @@ a:visited {
   grid-area: left;
 }
 
+ul {
+  padding: 0;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
+  grid-template-rows: auto;
+  justify-self: center;
+  align-self: flex-end;
+  margin: 0;
+}
+
 #header>.right {
   grid-area: right;
+  justify-self: end;
 }
 
 img.header-icon {
@@ -64,15 +103,25 @@ img.header-icon {
 }
 
 #body {
-  height: 75vh;
+  grid-area: body;
+  height: 100%;
+  display: grid;
+  grid-template-columns: max-content;
+  grid-template-rows: min-content max-content;
+  grid-auto-rows: min-content max-content;
+  align-items: baseline;
+  justify-content: center;
+  margin-top: 100px;
 }
 
 #footer {
+  grid-area: footer;
   height: 100px;
   background-color: yellow;
   display: grid;
   align-items: center;
   justify-content: center;
+  margin-top: 100px;
 }
 
 #footer span {
